# rust_practices

./: .gitignore
httpie/: Cargo.toml
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
scrap_html_2_md/: Cargo.toml
scrap_html_2_md/src/: main.rs
