[package]
name = "scrap_html_2_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
reqwest = { version = "0.11.9", features = ["blocking"]}
clap = { version = "3.0.14", features = ["derive"]}
tokio = {version = "1.16.1", features = ["full"]}
colored = "2.0.0"
lazy_static = "1.4.0"
regex = "1.5.4"
html2md = "0.2.13"